# otto

./: .gitignore  Anchor.toml  README.md  env.example  package-lock.json  package.json
bot/: README.md  env.example  package.json  setup.sh  tsconfig.json
bot/src/: index.ts
bot/src/commands/: claim.ts  start.ts  stats.ts  tier.ts
bot/src/config/: env.ts
bot/src/services/: database.ts  solana.ts
bot/src/types/: index.ts
ottoweb/: README.md  index.html  package.json  tailwind.config.ts
ottoweb/public/: manifest.json  robots.txt  sitemap.xml
ottoweb/src/: App.css  App.tsx  index.css
ottoweb/src/components/: WalletConnection.tsx
ottoweb/src/pages/: Dashboard.tsx  Index.tsx  Profile.tsx
programs/otto-referral-rewards/: Cargo.toml
programs/otto-referral-rewards/src/: lib.rs
