[package]
name = "otto-referral-rewards"
version = "0.1.0"
description = "OTTO Referral+ Rewards smart contract program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otto_referral_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.12"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
borsh = "0.10.3"
bytemuck = "1.0"
thiserror = "1.0"

[dev-dependencies]
anchor-client = "0.30.1"
solana-sdk = "1.18.12"
tokio = "1.0" 